--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="mx-auto  max-w-screen-xl px-6 lg:px-8 relative">
             <div class="relative flex justify-between h-20 space-x-10 w-full">
                 <div class="flex justify-start">
-                    <a class="flex flex-shrink-0 items-center" href="./index.html">
+                    <a class="flex flex-shrink-0 items-center" href="./page2.html">
                         <img class="block h-[6rem] w-auto" src="./Docs/Assets/Images/logo.png">
                     </a>
                 </div>
