--- a/page2.html
+++ b/page2.html
@@ -112,7 +112,7 @@
                 style="filter: grayscale(1) contrast(1.2) opacity(0.4);"></iframe>
         </div>
         <div class="w-full relative h-full">
-            <div class="pr-5 w-full z-10  max-w-7xl mx-auto" id="Purchase">
+            <div class="pr-5 pl-2 w-full z-10  max-w-7xl mx-auto" id="Purchase">
                 <div class="flex  bg-white text-[#495960] py-3 px-2 items-center justify-between ">
                     <h1 class=" font-semibold text-2xl">Purchase</h1>
                     <div class="flex items-center gap-4">
@@ -124,44 +124,81 @@
             </div>
             <div class="h-full overflow-y-auto">
                 <div class=" px-2  pb-2 bg-white max-w-7xl mx-auto" id="allDropdowns">
-                    <div class="">
-                        <button id="dropdownDefaultButton"
-                            class="bg-transparent text-[#495960] font-bold rounded-sm px-5 py-2.5 text-center inline-flex items-center border border-zinc-600"
-                            type="button" onclick="toggleDropdown()">Dropdown button
-                            <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                                fill="none" viewBox="0 0 10 6">
-                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                    stroke-width="2" d="m1 1 4 4 4-4" />
-                            </svg>
-                        </button>
-                        <!-- Dropdown menu -->
-                        <div id="dropdown"
-                            class="z-10 mt-3 transition-all hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
-                            <ul class="py-2 text-sm text-gray-700 dark:text-gray-200"
-                                aria-labelledby="dropdownDefaultButton">
-                                <li>
-                                    <a href="#" class="block px-4 py-2 cursor-default font-bold text-lg">Projects</a>
-                                    <div class="h-[.5px] w-full bg-zinc-400"></div>
-                                </li>
-                                <li>
-                                    <a href="#" class="block px-4 py-2 hover:bg-gray-100 font-medium text-lg"
-                                        onclick="selectItem(this)">Settings</a>
-                                </li>
-                                <li>
-                                    <a href="#" class="block px-4 py-2 hover:bg-gray-100 font-medium text-lg"
-                                        onclick="selectItem(this)">Earnings</a>
-                                </li>
-                                <li>
-                                    <a href="#" class="block px-4 py-2 hover:bg-gray-100 font-medium text-lg"
-                                        onclick="selectItem(this)">Sign out</a>
-                                </li>
-                            </ul>
+
+
+                    <div class="relative px-2">
+                        <div class="flex items-center justify-center flex-row gap-2">
+                            <div class="">
+                                <button id="dropdownDefaultButton"
+                                    class="bg-transparent text-[#495960] font-bold rounded-sm px-5 py-2.5 text-center flex gap-2 items-center border border-zinc-600"
+                                    type="button" onclick="toggleDropdown()">Buy
+                                    <i class="fa-solid fa-angle-down text-sm"></i>
+                                </button>
+                                <!-- Dropdown menu -->
+                                <div id="dropdown"
+                                    class="z-20 mt-3 absolute transition-all hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
+                                    <ul class="py-2 text-sm text-gray-700 dark:text-gray-200"
+                                        aria-labelledby="dropdownDefaultButton">
+                                        <li>
+                                            <a href="#" class="block px-4 py-2 cursor-default font-bold text-lg">your
+                                                project</a>
+                                            <div class="h-[.5px] w-full bg-zinc-400"></div>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="block px-4 py-2 hover:bg-gray-100  text-lg"
+                                                onclick="selectItem(this)">Buy</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="block px-4 py-2 hover:bg-gray-100  text-lg"
+                                                onclick="selectItem(this)">To rent out</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="block px-4 py-2 hover:bg-gray-100  text-lg"
+                                                onclick="selectItem(this)">Nine</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <input type="text" placeholder="+ 100,000 properties for sale in France"
+                                class="border p-2 py-[10px] w-full">
                         </div>
+                        <div class="mt-2 grid grid-cols-4 gap-2">
+                            <button 
+                                class="bg-transparent text-[#495960] font-bold rounded-sm px-3 py-2.5 text-center flex justify-between text-nowrap gap-2 items-center border border-zinc-600"
+                                type="button">5 types of goods
+                                <i class="fa-solid fa-angle-down text-sm"></i>
+                            </button>
+                            <button 
+                                class="bg-transparent text-zinc-400 rounded-sm px-3 py-2.5 text-center justify-between flex gap-2 items-center border border-zinc-600"
+                                type="button">your budget
+                                <i class="fa-solid fa-angle-down text-sm"></i>
+                            </button>
+                            <button 
+                                class="bg-transparent text-zinc-400 rounded-sm px-3 py-2.5 text-center justify-between flex gap-2 items-center border border-zinc-600"
+                                type="button">Number of parts
+                                <i class="fa-solid fa-angle-down text-sm"></i>
+                            </button>
+                            <button 
+                                class="bg-transparent text-zinc-400 rounded-sm px-3 py-2.5 text-center justify-between flex gap-2 items-center border border-zinc-600"
+                                type="button">Surface
+                                <i class="fa-solid fa-angle-down text-sm"></i>
+                            </button>
+                        </div>
+
+                    </div>
+
+                    <div class="flex items-center justify-between px-2 mt-4 mb-3">
+                        <button class="flex items-center gap-2 cursor-pointer text-zinc-600"><i
+                                class="fa-sharp fa-solid fa-plus w-9 h-9 border-2 border-zinc-400 flex rounded-full items-center text-zinc-500 justify-center"></i>
+                            Show all criteria</button>
+                        <button
+                            class="uppercase bg-[#ea516c] py-2 px-4  text-white rounded-sm flex items-center gap-2"><i
+                                class="fa-regular fa-bell"></i>create an alert</button>
                     </div>
                 </div>
                 <div class=" h-full bg-[#f1f3f4] ">
 
-                    <div class=" ">
+                    <div class=" max-w-7xl mx-auto px-3">
                         <div class="z-10 sticky  top-0 grid grid-cols-2 bg-white">
                             <h1 class=" bg-[#f1f3f4] p-3 font-medium">+ 100,000 properties for sale in France
                             </h1>
