--- a/index.html
+++ b/index.html
@@ -86,9 +86,51 @@
                     </div>
                 </div>
             </div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            <div class="swiper-slide">Slide 4</div>
+            <div class="swiper-slide">
+                <div class="w-full h-screen relative flex items-center justify-center">
+                    <img src="/Docs/Assets/Images/slider1.jpg"
+                        class="-z-10 object-cover h-full w-full absolute brightness-50" alt="">
+                    <div class="">
+                        <h1 class="z-10 md:text-7xl text-5xl font-semibold text-white">APPART CI</h1>
+                        <div class="mt-10 flex items-center md:flex-row flex-col  gap-4">
+                            <button
+                                class="px-14 py-3 bg-blue-600 text-white w-full md:w-auto rounded-full ">Services</button>
+                            <button
+                                class="px-14 py-3 bg-blue-600 text-white w-full md:w-auto rounded-full ">Services</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="w-full h-screen relative flex items-center justify-center">
+                    <img src="/Docs/Assets/Images/slider1.jpg"
+                        class="-z-10 object-cover h-full w-full absolute brightness-50" alt="">
+                    <div class="">
+                        <h1 class="z-10 md:text-7xl text-5xl font-semibold text-white">APPART CI</h1>
+                        <div class="mt-10 flex items-center md:flex-row flex-col  gap-4">
+                            <button
+                                class="px-14 py-3 bg-blue-600 text-white w-full md:w-auto rounded-full ">Services</button>
+                            <button
+                                class="px-14 py-3 bg-blue-600 text-white w-full md:w-auto rounded-full ">Services</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="w-full h-screen relative flex items-center justify-center">
+                    <img src="/Docs/Assets/Images/slider1.jpg"
+                        class="-z-10 object-cover h-full w-full absolute brightness-50" alt="">
+                    <div class="">
+                        <h1 class="z-10 md:text-7xl text-5xl font-semibold text-white">APPART CI</h1>
+                        <div class="mt-10 flex items-center md:flex-row flex-col  gap-4">
+                            <button
+                                class="px-14 py-3 bg-blue-600 text-white w-full md:w-auto rounded-full ">Services</button>
+                            <button
+                                class="px-14 py-3 bg-blue-600 text-white w-full md:w-auto rounded-full ">Services</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="swiper-pagination"></div>
     </div>
@@ -119,10 +161,10 @@
             <h2 class="text-4xl text-center pb-4">NOS SERVICES</h2>
             <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             <div class="flex items-center justify-center gap-6 flex-wrap mt-16">
-                <article
+                <article id="articleHover"
                     class="relative isolate flex flex-col justify-center items-center overflow-hidden rounded-2xl px-8 pb-12 pt-12 max-w-sm ">
                     <img src="https://images.unsplash.com/photo-1499856871958-5b9627545d1a"
-                        alt="University of Southern California" class="absolute inset-0 h-full w-full object-cover">
+                        alt="University of Southern California" class="absolute transition-all duration-500 inset-0 h-full w-full object-cover ">
                     <div class="absolute inset-0 bg-gradient-to-t from-gray-900 via-gray-900/40"></div>
                     <h3 class="z-10 mt-3 text-3xl font-bold text-white">VENDRE UN BIEN</h3>
                     <div class="z-10 gap-y-1 overflow-hidden text-sm leading-6 text-gray-300 text-center py-6">Lorem
@@ -133,10 +175,10 @@
                         <i class="fa-solid fa-angle-right"></i></a>
 
                 </article>
-                <article
+                <article id="articleHover"
                     class="relative isolate flex flex-col justify-center items-center overflow-hidden rounded-2xl px-8 pb-12 pt-12 max-w-sm ">
                     <img src="https://images.unsplash.com/photo-1499856871958-5b9627545d1a"
-                        alt="University of Southern California" class="absolute inset-0 h-full w-full object-cover">
+                        alt="University of Southern California" class="absolute transition-all duration-500 inset-0 h-full w-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-gray-900 via-gray-900/40"></div>
                     <h3 class="z-10 mt-3 text-3xl font-bold text-white">VENDRE UN BIEN</h3>
                     <div class="z-10 gap-y-1 overflow-hidden text-sm leading-6 text-gray-300 text-center py-6">Lorem
@@ -147,10 +189,10 @@
                         <i class="fa-solid fa-angle-right"></i></a>
 
                 </article>
-                <article
+                <article id="articleHover"
                     class="relative isolate flex flex-col justify-center items-center overflow-hidden rounded-2xl px-8 pb-12 pt-12 max-w-sm ">
                     <img src="https://images.unsplash.com/photo-1499856871958-5b9627545d1a"
-                        alt="University of Southern California" class="absolute inset-0 h-full w-full object-cover">
+                        alt="University of Southern California" class="absolute transition-all duration-500 inset-0 h-full w-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-gray-900 via-gray-900/40"></div>
                     <h3 class="z-10 mt-3 text-3xl font-bold text-white">VENDRE UN BIEN</h3>
                     <div class="z-10 gap-y-1 overflow-hidden text-sm leading-6 text-gray-300 text-center py-6">Lorem
