--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <!-- ----------------- -->
 
     <div class="flex lg:flex-row flex-col items-center justify-center py-10 mb-16 gap-8 px-5">
-        <h1 class="text-4xl font-medium text-nowrap">Lorem, ipsum dolor</h1>
+        <h1 class="sm:text-4xl text-3xl font-medium text-nowrap">Lorem, ipsum dolor</h1>
         <div class="w-[90%] sm:hidden h-[2px] bg-[#385883]"></div>
         <div class="flex items-center justify-center gap-5 max-w-3xl">
             <div class="w-2 h-32 sm:block hidden bg-zinc-400"></div>
@@ -292,7 +292,7 @@
                     </div>
                 </div>
 
-                <div class="w-full  rounded-lg sm:p-10 relative">
+                <div class="w-full  rounded-lg sm:p-10 relative mb-5 sm:mb-0">
                     <iframe width="100%" height="80%" class=" " frameborder="0" title="map" marginheight="0"
                         marginwidth="0" scrolling="no"
                         src="https://maps.google.com/maps?width=100%&height=600&hl=en&q=%C4%B0zmir+(My%20Business%20Name)&ie=UTF8&t=&z=14&iwloc=B&output=embed"
@@ -324,12 +324,12 @@
                 </div>
             </div>
         </section>
-        <div class="bg-[#ea852b] h-5 w-full"></div>
+        <div class="bg-[#ea852b] h-5 w-full mt-5"></div>
     </div>
 
     <!-- footer -->
 
-    <div class="bg-[#202632] py-5 px-5 text-white text-center w-full mt-1">
+    <div class="bg-[#202632] py-5 px-5 text-white text-center w-full ">
         <ul class="hidden md:flex justify-center items-center gap-6  pb-5">
             <li><a class="hover:text-[#fff] text-white transition-all navUnderLine" href="#">Vendre</a></li>
             <li><a class="hover:text-[#fff] text-white transition-all navUnderLine" href="#">Louer</a></li>
