--- a/page2.html
+++ b/page2.html
@@ -743,7 +743,7 @@
 
             // Create card element for List View
             const listCard = document.createElement('div');
-            listCard.classList.add('bg-white', 'flex', 'hover:shadow-lg', 'transition-all', 'cursor-pointer');
+            listCard.classList.add('bg-white', 'md:flex', 'hover:shadow-lg', 'transition-all', 'cursor-pointer');
             listCard.innerHTML = `
             <div class="relative max-w-lg w-full">
                 <img src="${card.image}" class="brightness-75 h-full w-full" alt="">
