--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
             <h1 id="closenNav" class="absolute cursor-pointer right-10 top-8 text-2xl font-bold"><i
                     class="fa-solid fa-xmark text-white"></i></h1>
             <div class="p-5 ">
-                <img src="./Docs/Assets/logo.png" class="h-16" alt="">
+                <img src="./Docs/Assets/Images/logo.png" class="h-16" alt="">
                 <ul class="flex flex-col gap-2 mt-10">
                     <li
                         class="text-white text-xl hover:bg-[#fff] hover:text-black  transition-all rounded-lg hover:shadow-md p-3">
